<resources>
    <string name="app_name">Ligin Ne - LoL</string>
    <string name="start_button_text">Teste Başla!</string>
    <string name="settings_button_text">Ayarlar</string>
    <string name="quit_button_text">Çık</string>
    <string name="launch_banner_ad_unit_id">ca-app-pub-9456292857540813/8752719733</string>
    <string name="question_image_description">Image of the question</string>
    <string name="mainmenu_image_description">Image for the main menu</string>
    <string name="question_1">Sıçra yeteneği kaç saniyede bir kullanılabilir? (Hiçbir rün etki etmeden)</string>
    <string name="question_2">Baron Nashor oyunun kaçıncı dakikasında canlanır?</string>
    <string name="question_3">Üç yetenek kullandığında şimşek çıkmasına sebep olan rün nedir?</string>
    <string name="question_4">Aşağıdaki karakterlerden hangisinin havaya savurma(zıplatma) özelliği yoktur?</string>
    <string name="question_5">Caitlyn tuzaklarını yemlemek için ne kullanır?</string>
    <string name="question_6">Aşağıdaki şampiyonlardan hangisi 4 rakamıyla takıntılıdır?</string>
    <string name="question_7">Bulut Ejderi ilk kez öldürüldüğünde bütün takıma yüzde kaç hareket hızı kazandırır?</string>
    <string name="question_8">İki takım arkadaşı birbirlerine yakın iken aynı anda şifa kullanırsa, ikinci kullanılan şifanın iyileştirme
    etkisi yüzde kaç azalır?</string>
    <string name="question_9">Kadim Ejderha\'yı öldürmek, önceden öldürülen ejderhalardan gelen etkileri yüzde kaç arttırır?</string>
    <string name="question_10">LeBlanc\'ın ayna görüntüsünün oluşabilmesi için canının yüzde kaçın altına inmesi gerekir?</string>
    <string name="question_11">Gromp\'u öldürmek minyon hanesine kaç sayı kazandırır?</string>
    <string name="question_12">Minyonlar kaçıncı saniyede doğmaya başlar?</string>
    <string name="question_13">Kızıl Keskingaga kaç saniyede bir yeniden doğar?</string>
    <string name="question_14">Yampiri Yengeç kaç saniyede bir yeniden doğar?</string>
    <string name="question_15">Mavi Gözcü kaç saniyede bir yeniden doğar?</string>
    <string name="question_16">Twisted Fate\'in sersemleten kartı hangisidir?</string>
    <string name="question_17">Fiora Q(hamle) yeteneğini bir rakibe isabet ettirdiği taktirde bekleme süresinin % kaçı iade edilir?</string>
    <string name="question_18">Yasuo\'nun rüzgar duvarı rakiplerinden gelen atışları kaç saniye boyunca engeller?</string>
    <string name="question_19">Ebedi Kılıç kaç saldırı gücü sağlar?</string>
    <string name="question_20">Savaşçı Çizmeleri kaç saldırı hızı sağlar?</string>
    <string name="question_21">LOL\'deki en pahalı eşya aşağıdakilerden hangisidir?</string>
    <string name="question_22">Aşağıdaki eşyaların arasından en az büyü direnci sağlayanı hangisidir?</string>
    <string name="question_23">Aşağıdaki eşyalardan hangisi bekleme süresinde azalma sağlamaz?</string>
    <string name="question_24">Aşağıdaki eşyalardan hangisinin aktif özelliği yoktur?</string>
    <string name="question_25">Baron Nashor\'un yeniden doğma süresi kaç saniyedir?</string>
    <string name="question_26">Twitch\'in ulti yeteneği kaç saniye sürer?</string>
    <string name="question_27">Aşağıdaki şampiyonlardan hangisinin sersemleten bir büyüsü yoktur?</string>
    <string name="question_28">Alev ejderi ilk kez öldürüldüğünde bütün takıma yüzde kaç saldırı gücü ve yetenek gücü kazandırır?</string>
    <string name="question_29">Dağ ejderini ilk kez öldüren bir takım destansı canavar ve kulelere fazladan yüzde kaç hasar verir?</string>
    <string name="question_30">Alacakurt\'un yeniden doğma süresi kaç saniyedir?</string>
    <string name="question_31">Kırmızı Korkabuk\'un yeniden doğma süresi kaç saniyedir?</string>
    <string name="question_32">Kırmızı ve mavi güçlendirmenin etkisi kaç dakika sürer?</string>
    <string name="question_33">Mavi güçlendirmeyi alan bir şampiyonun bekleme süresi yüzde kaç azalır?</string>
    <string name="question_34">Yampiri Yengeç\'i öldürmek minyon hanesine kaç sayı kazandırır?</string>
    <string name="question_35">Resimdeki bölgede hangi orman canavarı canlanır?</string>
    <string name="question_36">Resimdeki bölgede hangi orman canavarı canlanır?</string>
    <string name="question_37">Resimdeki bölgede hangi orman canavarı canlanır?</string>
    <string name="question_38">Resimdeki bölgede hangi orman canavarı canlanır?</string>
    <string name="question_39">Resimdeki bölgede hangi orman canavarı canlanır?</string>
    <string name="question_40">Resimdeki bölgede hangi orman canavarı canlanır?</string>
    <string name="question_41">Aşağıdaki şampiyonlarının hangisi mana harcamadan kullanılabilen bir yeteneğe sahiptir?</string>
    <string name="question_42">Ahri ulti yeteneği ile kaç defa ileri atılabilir</string>
    <string name="question_43">Akali bir rakibin üstünde Q(Suikastçının Damgası) yeteneğini kullanırsa onu kaç saniyeliğine damgalar?</string>
    <string name="question_44">Alistar ulti yeteneği 3. seviyedeyken kullanırsa, yüzde kaç daha az fiziksel hasar ve büyü hasarı alır?</string>
    <string name="question_45">Annie\'nin yaptığı kaçıncı büyü hedefini sersemletir?</string>
    <string name="question_46">Tibbers\'ı öldürmek kaç altın kazandırır?</string>
    <string name="question_47">Amumu\'nun ultisine yakalanan rakipler kaç saniye boyunca saldırı gerçekleştiremez ve hareket edemez?</string>
    <string name="question_48">Element ejderhalarını öldürmek kaç altın kazandırır?</string>
    <string name="question_49">Baron Nashor\'u öldürmek her bir takım üyesine kaç altın kazandırır?</string>
    <string name="question_50">Anivia\'nın yumurtaya dönüşmesi halinde yeniden doğması için kaç saniye geçmesi gereklidir?</string>
    <string name="question_51">Kadim Ejderha\'nın yeniden doğma süresi kaç saniyedir?</string>
    <string name="question_52">Kadim Ejderha\'yı öldürmek her bir takım üyesine kaç altın kazandırır?</string>
    <string name="question_53">Braum bir hedefin üzerinde kaç yük biriktirirse hehdefin sersemlemesine neden olur?</string>
    <string name="question_54">Okyanus ejderini ilk kez öldüren takımın üyeleri 5 saniyede bir eksik can ve manalarının yüzde kaçını yeniler?</string>
    <string name="question_55">Aşağıdaki nesnelerden hangisi üzerine ışınlan yeteneği kullanılamaz?</string>
    <string name="answer_1a">250</string>
    <string name="answer_1b">280</string>
    <string name="answer_1c">300</string>
    <string name="answer_1d">320</string>
    <string name="answer_2a">15</string>
    <string name="answer_2b">20</string>
    <string name="answer_2c">25</string>
    <string name="answer_2d">30</string>
    <string name="answer_3a">Yıldırımların Hükmü</string>
    <string name="answer_3b">Şimşeklerin Efendisi</string>
    <string name="answer_3c">Elektrik ver</string>
    <string name="answer_3d">Elektrik şoku</string>
    <string name="answer_4a">Tresh</string>
    <string name="answer_4b">Volibear</string>
    <string name="answer_4c">Malphite</string>
    <string name="answer_4d">Rumble</string>
    <string name="answer_5a">Kek</string>
    <string name="answer_5b">Çörek</string>
    <string name="answer_5c">Kurabiye</string>
    <string name="answer_5d">Çilek</string>
    <string name="answer_6a">Yasuo</string>
    <string name="answer_6b">Orianna</string>
    <string name="answer_6c">Velkoz</string>
    <string name="answer_6d">Jhin</string>
    <string name="answer_7a">%2</string>
    <string name="answer_7b">%4</string>
    <string name="answer_7c">%6</string>
    <string name="answer_7d">%8</string>
    <string name="answer_8a">%30</string>
    <string name="answer_8b">%40</string>
    <string name="answer_8c">%50</string>
    <string name="answer_8d">%60</string>
    <string name="answer_9a">%40</string>
    <string name="answer_9b">%50</string>
    <string name="answer_9c">%60</string>
    <string name="answer_9d">%70</string>
    <string name="answer_10a">%10</string>
    <string name="answer_10b">%20</string>
    <string name="answer_10c">%30</string>
    <string name="answer_10d">%40</string>
    <string name="answer_11a">2</string>
    <string name="answer_11b">3</string>
    <string name="answer_11c">4</string>
    <string name="answer_11d">5</string>
    <string name="answer_12a">60</string>
    <string name="answer_12b">65</string>
    <string name="answer_12c">70</string>
    <string name="answer_12d">75</string>
    <string name="answer_13a">120</string>
    <string name="answer_13b">150</string>
    <string name="answer_13c">180</string>
    <string name="answer_13d">200</string>
    <string name="answer_14a">120</string>
    <string name="answer_14b">150</string>
    <string name="answer_14c">180</string>
    <string name="answer_14d">200</string>
    <string name="answer_15a">240</string>
    <string name="answer_15b">300</string>
    <string name="answer_15c">360</string>
    <string name="answer_15d">400</string>
    <string name="answer_16a">Sarı</string>
    <string name="answer_16b">Mavi</string>
    <string name="answer_16c">Yeşil</string>
    <string name="answer_16d">Kırmızı</string>
    <string name="answer_17a">%40</string>
    <string name="answer_17b">%50</string>
    <string name="answer_17c">%60</string>
    <string name="answer_17d">%70</string>
    <string name="answer_18a">4</string>
    <string name="answer_18b">5</string>
    <string name="answer_18c">6</string>
    <string name="answer_18d">7</string>
    <string name="answer_19a">70</string>
    <string name="answer_19b">80</string>
    <string name="answer_19c">90</string>
    <string name="answer_19d">100</string>
    <string name="answer_20a">20</string>
    <string name="answer_20b">25</string>
    <string name="answer_20c">30</string>
    <string name="answer_20d">35</string>
    <string name="answer_21a">Ebedi Kılıç</string>
    <string name="answer_21b">Kanasusamış</string>
    <string name="answer_21c">Üçlü Kuvvet</string>
    <string name="answer_21d">Hextech Silahkılıç</string>
    <string name="answer_22a">Değişken Miğfer</string>
    <string name="answer_22b">Zz\'Rot Kapısı</string>
    <string name="answer_22c">Malmortius\'un Ağzı</string>
    <string name="answer_22d">Mikael\'in Kazanı</string>
    <string name="answer_23a">Kara Balta</string>
    <string name="answer_23b">Donmuş Balyoz</string>
    <string name="answer_23c">Cehennem Maskesi</string>
    <string name="answer_23d">Zhonya\'nın Kumsaati</string>
    <string name="answer_24a">Başmelek Asası</string>
    <string name="answer_24b">Tiamat</string>
    <string name="answer_24c">Gecenin Kıyısı</string>
    <string name="answer_24d">Mahvolmuş Kralın Kılıcı</string>
    <string name="answer_25a">360</string>
    <string name="answer_25b">400</string>
    <string name="answer_25c">420</string>
    <string name="answer_25d">500</string>
    <string name="answer_26a">4</string>
    <string name="answer_26b">5</string>
    <string name="answer_26c">6</string>
    <string name="answer_26d">7</string>
    <string name="answer_27a">Riven</string>
    <string name="answer_27b">Leona</string>
    <string name="answer_27c">Kassadin</string>
    <string name="answer_27d">Aurelion Sol</string>
    <string name="answer_28a">%5</string>
    <string name="answer_28b">%6</string>
    <string name="answer_28c">%7</string>
    <string name="answer_28d">%8</string>
    <string name="answer_29a">%10</string>
    <string name="answer_29b">%20</string>
    <string name="answer_29c">%30</string>
    <string name="answer_29d">%40</string>
    <string name="answer_30a">120</string>
    <string name="answer_30b">150</string>
    <string name="answer_30c">180</string>
    <string name="spinner_text_field">Ses</string>
    <string name="contact_button">İletişim bilgilerini göster</string>
    <string name="version_text_view">v1.0</string>
    <string name="contact_text_view">liginne.lol@gmail.com</string>
    <string name="rate_button">Uygulamayı puanla!</string>
</resources>