<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"

    android:id="@+id/rootLayoutStartPage"
    android:background="@drawable/background"

    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context="com.roami.leaguefleet.LaunchActivity">

    <ImageView
        android:id="@+id/imageView"

        android:layout_width="wrap_content"
        android:layout_height="242dp"


        android:layout_marginTop="48dp"
        android:contentDescription="@string/mainmenu_image_description"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rank_36" />

    <Button
        android:id="@+id/start_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"

        android:background="@color/colorButton"
        android:text="@string/start_button_text"
        android:textAllCaps="false"
        android:textColor="@color/colorText"

        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/settings_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"

        android:background="@color/colorButton"
        android:text="@string/settings_button_text"
        android:textAllCaps="false"
        android:textColor="@color/colorText"

        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button" />

    <Button
        android:id="@+id/quit_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"

        android:background="@color/colorButton"
        android:text="@string/quit_button_text"
        android:textAllCaps="false"
        android:textColor="@color/colorText"

        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_button" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/launcher_banner_ad_view"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"

        ads:adSize="BANNER"
        ads:adUnitId="@string/launch_banner_ad_unit_id"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>