<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.roami.leaguefleet.MainActivity">

    <Switch
        android:id="@+id/sound_switch"

        android:layout_width="150dp"
        android:layout_height="52dp"

        android:layout_marginBottom="8dp"

        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/spinner_text_field"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/rate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rate_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"

        android:layout_height="wrap_content"

        android:layout_marginBottom="16dp"

        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"

        android:background="@color/colorButton"
        android:text="@string/rate_button"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/contact_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"

        android:layout_width="0dp"
        android:layout_height="48dp"

        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorButton"

        android:text="@string/contact_button"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/version_text_view"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"

        android:gravity="center"
        android:text="@string/version_text_view"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_button" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/contact_text_view"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/contact_text_view"

        android:textColor="@color/colorText"
        android:textSize="17sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="1.0" />


</android.support.constraint.ConstraintLayout>